// Copyright 2012 Viewfinder. All rights reserved.
// Author: Peter Mattis
syntax = "proto2";
option java_package = "co.viewfinder.proto";
option java_outer_classname = "SubscriptionMetadataPB";

// Local subscriptions are mostly-opaque blobs returned by iTunes/StoreKit.
// They are stored in the DB to recover from crashes between the completion
// of the itunes transaction and the call to record_subscription.
//
// TODO(ben): delete these once they have been recorded and we have seen a
// corresponding ServerSubscriptionMetadata.
//
// TODO(peter): LocalSubscriptionMetadata should be moved into
// clients/ios/Source. It is iOS specific.
message LocalSubscriptionMetadata {
  optional string product = 1;
  optional double timestamp = 2;
  optional string receipt = 3;
  optional bool recorded = 4;
}

// The server returns the decoded subscription information via query_users.
message ServerSubscriptionMetadata {
  // Note that the server transaction id will have an "itunes:" prefix not present
  // in the local transaction id (or eventually some other prefix)
  optional string transaction_id = 1;
  optional string subscription_id = 2;
  optional double timestamp = 3;
  optional double expiration_ts = 4;
  optional string product_type = 5;
  optional double quantity = 6;
  optional string payment_type = 7;
}
